<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_edit_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/race_edit" />
    <item
        android:id="@+id/menu_item_new_race_from_existing"
        android:title="@string/race_new_from_existing" />
    <item
        android:id="@+id/menu_item_export_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/race_export" />
    <item
        android:id="@+id/menu_item_send_race_desktop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/race_send_desktop" />
    <item
        android:id="@+id/menu_item_delete_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/race_delete" />
</menu>
