<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_edit_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/event_series_edit" />
    <item
        android:id="@+id/menu_item_export_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/event_series_export" />
    <item
        android:id="@+id/menu_item_send_series_desktop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/event_series_send_desktop" />
    <item
        android:id="@+id/menu_item_remove_series_grouping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/event_series_remove_grouping" />
</menu>
