<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Alias rows contain race configuration, not personal autofill data. -->
    <EditText
        android:id="@+id/alias_item_code"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/readout_detail_code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/alias_item_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/general_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

    <ImageButton
        android:id="@+id/alias_item_add_btn"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/black"
        android:contentDescription="@string/accessibility_add_alias"
        android:src="@drawable/ic_add_white" />

    <ImageButton
        android:id="@+id/alias_item_delete_btn"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/black"
        android:contentDescription="@string/accessibility_delete_alias"
        android:src="@drawable/ic_delete_white" />

</LinearLayout>
